src/objects/Expert_Engagement__c.object
<CustomObject>
    <description>Object to capture cross opportunity Expert engagements</description>
    <fields>
        <fullName>Engagement_Date__c</fullName>
        <label>Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expert_Name__c</fullName>
        <label>Expert Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Comments__c</fullName>
        <label>Feedback/ Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Expert Engagements</relationshipLabel>
        <relationshipName>Expert_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Engagement__c</fullName>
        <label>Rate Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Expert Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expert Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expert Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>